# magnum-ui-example

./: CMakeLists.txt  README.md
src/: UIExample.cpp
